@startuml DLT.DecoderClass
abstract class DltTraceDecoderBase
class DltTraceDecoder
class DltFileTraceDecoder
class DltSerialTraceDecoder

DltTraceDecoder -d-|> DltTraceDecoderBase
DltFileTraceDecoder -d-|> DltTraceDecoderBase
DltSerialTraceDecoder -d-|> DltTraceDecoderBase

interface IDltLineBuilder
class DltLineBuilder

DltLineBuilder .d.|> IDltLineBuilder
DltLineBuilder .r. DltTraceDecoderBase : <<use>>

DltTraceDecoderBase o-d- IDltLineBuilder
DltTraceDecoder .d.> DltLineBuilder : <<instantiate>>
DltFileTraceDecoder .d.> DltLineBuilder
DltSerialTraceDecoder .d.> DltLineBuilder
@enduml